# cpp_projects

./: .gitignore  .gitmodules
chatbot_projects/HybridChatbot/: README.md  chatbot.cpp  rules.txt
chatbot_projects/RetrievalBasedChatbot/: README.md  chatbot.cpp  dataset.txt
chatbot_projects/RuleBasedChatbot/: README.md  chatbot.cpp  responses.txt
chatbot_projects/WebHybridChatbot/: CMakeLists.txt  README.md  instructions.md
chatbot_projects/WebHybridChatbot/backend/: HybridChatbot.cpp  HybridChatbot.h  dataset.json  main.cpp  rules.json
chatbot_projects/WebHybridChatbot/frontend/: package-lock.json  package.json  vite.config.js
chatbot_projects/WebHybridChatbot/frontend/src/: App.jsx  index.css
ilp_projects/resource_alloc/: .gitignore  ALGO.md  CMakeLists.txt  CMakePresets.json  EXAMPLE.md  EXAMPLE_hwdesign.md  README.md  _resource_alloc_tmp_out.txt
ilp_projects/resource_alloc/src/: CMakeLists.txt  DataStructures.cpp  DataStructures.h  Optimize.cpp  Optimize.h  OptimizeByHeuristic.cpp  OptimizeByHeuristic.h  OptimizeByILP.cpp  OptimizeByILP.h  main.cpp
